Добавлен футер и блок <INS Mobile>

--- a/insurance/src/styles/less/layout.less
+++ b/insurance/src/styles/less/layout.less
@@ -5,7 +5,9 @@
 @import 'blocks/naviTop.less';
 @import 'blocks/carousel.less';
 @import 'blocks/mainProducts.less';
+@import 'blocks/mainInsmobile.less';
 @import 'blocks/icon.less';
+@import 'blocks/footer.less';
 
 body {
     min-width: 320px;
