Template blog: Мелкие правки верстки, в readme.md добавлена ссылка на demo

--- a/blog/src/styles/less/styles.less
+++ b/blog/src/styles/less/styles.less
@@ -65,8 +65,11 @@ a {
 	&-subscription {
 		font-family: 'BaseFontBold';
 
-		img {
-			float: left;
+		&-img {
+            float: left;
+            width: 100px; 
+            height: 130px; 
+            background: #ccc;
 			margin: 0 15px 0 0;
 		}
 
